2006-11-06  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y: support unary ~ operator

2006-11-06  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: use g_value_set_object for interfaces
	* vala/valainterface.vala: implement get_type_id

2006-11-02  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump

2006-11-02  Jürg Billeter  <j@bitron.ch>

	* NEWS: update for 0.0.5 release

2006-11-02  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: write CCode.cname attribute for methods
	* vapi/atk.vala, vapi/gdk-2.0.vala, vapi/gtk+-2.0.vala, vapi/pango.vala:
	  use CCode.cname attribute

2006-11-02  Raffaele Sandrini  <rasa@gmx.ch>

	* vala/valacodegenerator.vala: fix memory leak caused when container
	  expression transfers ownership to the foreach statement

2006-11-02  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: don't use weak for value types
	* vala/valamethod.vala: make set_cname public
	* vapi/atk.vala, vapi/gdk-2.0.vala, vapi/gtk+-2.0.vala, vapi/pango.vala:
	  add Gtk.Allocation, don't use weak for value types

2006-10-31  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: don't add NULL to end of variable
	  argument list for printf-style functions to reduce the number of
	  warnings during C compilation
	* vala/valamethod.vala: support PrintfFormat attribute
	* vala/vala.h: include valareport.h
	* vapi/glib-2.0.vala: use PrintfFormat attribute

2006-10-27  Jürg Billeter  <j@bitron.ch>

	* vapi/atk.vala, vapi/gdk-2.0.vala, vapi/gtk+-2.0.vala, vapi/pango.vala:
	  miscellaneous fixes

2006-10-26  Raffaele Sandrini  <rasa@gmx.ch>

	* vala/valasemanticanalyzer.vala: make foreach iterator only visible to
	  the foreach body.
	* INSTALL: update

2006-10-26  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: don't create empty dispose functions,
	  support virtual methods with non-void return type
	* vapi/glib-2.0.vala: include glib/gstdio.h for GLib file functions
